# imageParser

./: CMakeCache.txt  CMakeLists.txt  Doxyfile  Makefile  README.md  cmake_install.cmake  label  list  main.cpp  main.h  opencv-2.4.9
clcnst/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
include/: blur.h  main.h  mathMine.h
lfw/: t  tt
mine/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  lbp.cpp  lbp.h  lbpTest.cpp  pca.py  test.sh  testSet.txt
src/: CMakeCache.txt  CMakeLists.txt  Makefile  base.cpp  base.h  blur.cpp  blur.h  blurCombine.cpp  blurCombine.h  cmake_install.cmake  feature.cpp  feature.cpp.20150511  feature.h  featureCompute.cpp  featureCompute.h  lbpMine.cpp  lbpMine.h  ldaMine.cpp  ldaMine.h
stasm/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  STASMConfig.cmake  cmake_install.cmake  stasmMain  tags
stasm/apps/: appmisc.cpp
stasm/apps/shapefile/: shapefile.cpp
vosm-0.3.3/: CHANGES~  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL~  Makefile  ShapeInfo.txt  cmake_install.cmake  cmake_uninstall.cmake  cvconfig.h  vosmConfig.cmake
vosm-0.3.3/doc/: license.txt~
vosm-0.3.3/doc/.svn/: all-wcprops  entries
vosm-0.3.3/doc/.svn/text-base/: license.txt.svn-base
vosm-0.3.3/lib/: libcomalgs.so.0.3  libcomalgs.so.0.3.2  libcvcommon.so.0.3  libcvcommon.so.0.3.2  libensembletraining.so.0.3  libensembletraining.so.0.3.2  libfeatureextraction.so.0.3  libfeatureextraction.so.0.3.2  libintegraltransform.so.0.3  libintegraltransform.so.0.3.2  libsmbuilding.so.0.3  libsmbuilding.so.0.3.2  libsmfitting.so.0.3  libsmfitting.so.0.3.2  libutils.so.0.3  libutils.so.0.3.2
vosm-0.3.3/modules/: CMakeLists.txt~  Makefile  cmake_install.cmake
vosm-0.3.3/modules/comalgs/: CMakeLists.txt~  Makefile  cmake_install.cmake
vosm-0.3.3/modules/common/: Makefile  cmake_install.cmake
vosm-0.3.3/modules/cvcommon/: CMakeLists.txt~  Makefile  cmake_install.cmake
vosm-0.3.3/modules/ensembletraining/: CMakeLists.txt~  Makefile  cmake_install.cmake
vosm-0.3.3/modules/featureextraction/: CMakeLists.txt~  Makefile  cmake_install.cmake
vosm-0.3.3/modules/integraltransform/: Makefile  cmake_install.cmake
vosm-0.3.3/modules/smbuilding/: CMakeLists.txt~  Makefile  cmake_install.cmake
vosm-0.3.3/modules/smfitting/: CMakeLists.txt~  Makefile  cmake_install.cmake
vosm-0.3.3/tests/: CMakeCache.txt  CMakeLists.txt~  Makefile  cmake_install.cmake
vosm-0.3.3/tests/test_ensembletraining/: CMakeLists.txt~  Makefile  cmake_install.cmake
vosm-0.3.3/tests/test_featureextraction/: CMakeCache.txt  CMakeLists.txt~  Makefile  cmake_install.cmake
vosm-0.3.3/tests/test_integraltransform/: CMakeLists.txt~  Makefile  cmake_install.cmake
vosm-0.3.3/tests/test_smbuilding/: CMakeLists.txt~  Makefile  cmake_install.cmake
vosm-0.3.3/tests/test_smfitting/: CMakeCache.txt  CMakeLists.txt~  Makefile  cmake_install.cmake
vosm-0.3.3/unix-install/: vosm.pc  vosmConfig.cmake
